# COMP-150-VMs

./: .gitmodules  .vimrc  env.sh
src/: FINALE-PRACTICE  REFLECTION.depth
src/svm/: .vimrc  GNUmakefile  README.md  REFLECTION  SUBMIT.01  SUBMIT.11  disasm.c  instructions.c  iparsers.c  iparsers.h  loader.c  opcode.h  prims.md  print.c  svm.c  value.h  vmheap.c  vmrun.c  vmstack.h  vmstate.c  vmstate.h
src/svm-original/: REFLECTIONS  SUBMIT  gcmeta.h  instructions.c  iparsers.c  opcode.h  predef.vo  svm.c  vmerror.h  vmheap.c  vmrun.c  vmstack.h  vmstate.h
src/svm-original/utils/: simd_vtable.h
src/svm/examples/: asdf.vo  box.vo  cont.vo  ex.vo  negtest.vo
src/svm/experimental/: svmconfig.h.in  usqrt
src/svm/svm/src/: alloc.c  heap.c  instruction.c  parse.c  run.c  string.c  svm.c  vm.c
src/svm/tests/: CMakeLists.txt  playground.c  string-test.c
src/svm/utils/: simd_vtable.c  vector.h
src/svm2/: .vimrc  CMakeLists.txt  README.md
src/svm2/examples/: closure.vo  cont2.vo
src/svm2/experimental/: mathops  svm.h  usqrt.c
src/svm2/svm/: CMakeLists.txt
src/svm2/svm/include/svm/: assert.h  config.h.in  hash.h  hash2.h  heap.h  instruction.h  opcode-data.h  opcodes.h  parse.h  run.h  string.h  value.h  vector.h  vm.h
src/svm2/svm/src/: alloc.c  heap.c  instruction.c  mathops.c  parse.c  run.c  string.c  svm.c  symbol.c  value.c  vm.c
src/svm2/tests/: CMakeLists.txt  hash-test.c  heap-test.c  string-test.c  vector-test.c
src/uft/: ChangeLog.md  GNUmakefile  GRAMMAR  README.md  REFLECTION  SUBMIT.03  SUBMIT.05  SUBMIT.06  asmlex.sml  asmparse.sml  grammar.md  laws  object-code.sml  ordmap.pl  package.yaml  simple-parser.hs  simple-parser.sml  stack.yaml  uft-prog  uft.cabal
src/uft-haskell/: ;  REFLECTION  REFLECTION.08  REFLECTION.09  REFLECTION.10  REFLECTION.12  SUBMIT.09  SUBMIT.10  package.yaml  stack.yaml  uft.cabal
src/uft-haskell/_src/Uft/: AstNodes.hs  Nanopass.hs
src/uft-haskell/_src/_Uft/: AstNodes.hs
src/uft-haskell/app/: Main.hs  OldMain.hs
src/uft-haskell/examples/: macro-that-works.scm  macro.scm  test.scm
src/uft-haskell/examples/scheme/: queue.scm
src/uft-haskell/experimental/: VariantFSpec.hs
src/uft-haskell/experimental/Type/: ListUtils.hs  Variant.hs
src/uft-haskell/experimental/Uft2/: DTALC.hs
src/uft-haskell/experimental/_Type/: Membership.hs  Variant.hs  VariantF.hs
src/uft-haskell/src/Data/: Sum.hs  VarTable.hs
src/uft-haskell/src/Type/: Hyper.hs  List.hs  OpenADT.hs  VarF.hs
src/uft-haskell/src/Uft/: AstNodes.hs  Macroexpand.hs  Naming.hs  Parse.hs  Pretty.hs  Primitives.hs  Transform.hs  Util.hs
src/uft-haskell/src/_Uft/: Located.hs  Primitives.hs  Util.hs
src/uft-haskell/test/: _THSpec.hs
src/uft-haskell/test/Data/: SumSpec.hs
src/uft-old/: simple-parser.hs  unparse.vs
src/uft-original/: SUBMIT.07  asm.sml
src/uft-prolog/: GNUmakefile  SUBMIT.04
src/uft-prolog/_old/: _label_elimination.pl  _label_elimination2.pl  load.pl
src/uft-prolog/t/: allsyntax.vs
src/uft-prolog/uft/: parse.pl  to_object.pl  unparse.pl
src/uft-prolog/uft/parse/: lexer.pl  (+1 more)
src/uft-sml/: REFLECTION
src/uft/_old/: run.pl
src/uft/app/: Main.hs
src/uft/examples/: deriv.scm  kntest.scm  plustest.scm  qsort-orig.scm
src/uft/src/: SExpr.hs
src/uft/t/: example.vs  loadfun.vs
src/uft/test/: ADTSpec.hs
src/uft/uft/: label_elim.pl  main.pl  to_object.pl  unparse.pl
test/: calltest.vo  fail.vo  high.vo  overreg.vo  overstack.vo  overtail.vo  pass.vo  recursiontest.vo  returntest.vo  tailcalltest.vo  tailcalltest2.vo
(+132 files in other folders)
